update wikis, and 404 page.

--- a/Emacs.html
+++ b/Emacs.html
@@ -31,16 +31,49 @@
 <a href="http://emacser.com/">Emacs 中文網</a>
 </li>
 <li>
+<a href="http://www.emacswiki.org/">EmacsWiki</a>
+</li>
+<li>
 <a href="http://blog.waterlin.org/articles/tag/emacs">细节之锤#Emacs</a>
 </li>
 <li>
-<a href="http://orgmode.org/">Org-mode</a>
+<a href="http://zh.wikipedia.org/zh/Emacs">@wikipedia</a>
+</li>
+<li>
+<a href="http://www2.lib.uchicago.edu/keith/tcl-course/emacs-tutorial.html">A Tutorial Introduction to GNU Emacs</a>
 </li>
 </ul>
 
 <p>
 <img src="img/emacs-fingers.png" /> <a href="http://bc.tech.coop/blog/070831.html">來源</a>
 </p>
+
+<h2 id="toc_1.1">Tools</h2>
+<ul>
+<li>
+<a href="http://www.gnu.org/software/emacs/">GNU Emacs</a>
+</li>
+<li>
+<a href="http://aquamacs.org/">Putting the Mac in Emacs</a>
+</li>
+<li>
+<a href="http://www.xemacs.org/">XEmacs</a>
+</li>
+</ul>
+
+<h2 id="toc_1.2">Books</h2>
+<ul>
+<li>
+<a href="http://oreilly.com/catalog/9780596006488/">Learning GNU Emacs, Third Edition</a>
+</li>
+</ul>
+
+<h2 id="toc_1.3">Others</h2>
+<ul>
+<li>
+<a href="http://orgmode.org/">Org-mode</a>
+</li>
+</ul>
 
 <script type="text/javascript">
 function onSearch(){
@@ -60,7 +93,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年04月23日 15:12:31</p>
+    <p>本页最后修订于 2010年11月13日 13:36:35</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
