--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 <a href="Web-Design.html">Web-Design</a> | <a href="Links.html">Links</a>
 </li>
 <li>
-<a href="JavaScript.html">JavaScript</a> | <a href="jQuery.html">jQuery</a> | <a href="YUI.html">YUI</a>(<a href="kissy.html">kissy</a>) | <a href="Prototype.html">Prototype</a> |
+<a href="JavaScript.html">JavaScript</a> | <a href="jQuery.html">jQuery</a> | <a href="YUI.html">YUI</a>(<a href="kissy.html">kissy</a>) | <a href="Prototype.html">Prototype</a> | <a href="MooTools.html">MooTools</a> |
     <a href="ExtJS.html">ExtJS</a> | <a href="http://www.dojotoolkit.org/">Dojo</a> | <a href="http://www.asp.net/ajax/">MS Ajax</a> |
-    <a href="http://www.mootools.net/">mootools</a>(<a href="http://github.com/mootools">@github</a>) |
     <a href="http://directwebremoting.org">DWR</a> |
     <a href="http://ajaxrpc.com/">AJAXRPC</a>(<a href="http://ajaxrpc.com/cn/index.html">中文</a>)
 </li>
@@ -49,34 +48,33 @@
 <li>
 <a href="LaTeX.html">LaTeX</a> | <a href="Wiki.html">Wiki</a> | <a href="Markdown.html">Markdown</a> | <a href="Textile.html">Textile</a> | <a href="reStructuredText.html">reStructuredText</a>
     <a href="http://antbsd.twbbs.org/~ant/wordpress/?p=2720">淺談輕量級標記語言</a>
+</li>
+<li>
 <div class="toc">
 <ul>
 <li><a href="#toc_1">闲耘™. Wiki</a></li>
 <ul>
 <li><a href="#toc_1.1">Programming</a></li>
-<li><a href="#toc_1.2">开发工具(Develop)</a></li>
-<li><a href="#toc_1.3">Design</a></li>
-<li><a href="#toc_1.4">Tools</a></li>
+<li><a href="#toc_1.2">数据 &amp; 可视化</a></li>
+<li><a href="#toc_1.3">开发工具(Develop)</a></li>
+<li><a href="#toc_1.4">Design</a></li>
+<li><a href="#toc_1.5">Tools</a></li>
 <ul>
-<li><a href="#toc_1.4.1">浏览器(Browser)</a></li>
-<li><a href="#toc_1.4.2">编辑器(IDE/Editor)</a></li>
-<li><a href="#toc_1.4.3">画图</a></li>
-<li><a href="#toc_1.4.4">文档(Docs/Slide)</a></li>
-<li><a href="#toc_1.4.5">桌面系统管理</a></li>
-<li><a href="#toc_1.4.6">操作系统</a></li>
-<li><a href="#toc_1.4.7">其他(Others)</a></li>
+<li><a href="#toc_1.5.1">浏览器(Browser)</a></li>
+<li><a href="#toc_1.5.2">编辑器(IDE/Editor)</a></li>
+<li><a href="#toc_1.5.3">画图</a></li>
+<li><a href="#toc_1.5.4">文档(Docs/Slide)</a></li>
+<li><a href="#toc_1.5.5">桌面系统管理</a></li>
+<li><a href="#toc_1.5.6">操作系统</a></li>
+<li><a href="#toc_1.5.7">其他(Others)</a></li>
 </ul>
-<li><a href="#toc_1.5">Web</a></li>
-<li><a href="#toc_1.6">Tips</a></li>
-<li><a href="#toc_1.7">Others</a></li>
+<li><a href="#toc_1.6">Web</a></li>
+<li><a href="#toc_1.7">Tips</a></li>
+<li><a href="#toc_1.8">Others</a></li>
 </ul>
 </ul>
 </div>
-</li>
-<li>
-<a href="Velocity.html">Velocity</a> | <a href="mustache.html">mustache</a> | <a href="FreeMarker.html">FreeMarker</a><br />
-    <a href="http://www.rapid-framework.org.cn/">rapid-framework</a>
-    (<a href="http://code.google.com/p/rapid-framework/">@google.code</a>)
+<a href="Velocity.html">Velocity</a> | <a href="mustache.html">mustache</a> | <a href="FreeMarker.html">FreeMarker</a>
 </li>
 <li>
 <a href="RSS.html">RSS</a> | <a href="Atom.html">Atom</a>
@@ -113,7 +111,7 @@ Code Prettify/Syntax Highligjht
 <a href="Email.html">Email</a> | <a href="Images.html">Images</a>
 </li>
 <li>
-<a href="Google.html">Google</a> | <a href="http://msdn.microsoft.com/en-us/library">MSDN Library</a> | <a href="http://index.baidu.com/">百度指数</a>
+<a href="Google.html">Google</a> | <a href="http://msdn.microsoft.com/en-us/library">MSDN Library</a> | <a href="Baidu.html">百度</a>
 </li>
 <li>
 <a href="Compiler.html">编译器</a>
@@ -127,16 +125,19 @@ Code Prettify/Syntax Highligjht
 </li>
 </ul>
 
-
-<h2 id="toc_1.2">开发工具(Develop)</h2>
+<h2 id="toc_1.2">数据 &amp; 可视化</h2>
 <ul>
-<li>
-构建/发布(Build) : <a href="Maven.html">Maven</a> | <a href="http://ant.apache.org/">Ant</a>
-</li>
 <li>
 <a href="data-visualization.html">数据可视化</a> | <a href="BI.html">商业智能</a> | <a href="database.html">数据库(Database)</a> |
     <a href="NoSQL.html">NoSQL</a>
     Oracle | MySQL | mongodb | pg | SQLite | couchdb
+</li>
+</ul>
+
+<h2 id="toc_1.3">开发工具(Develop)</h2>
+<ul>
+<li>
+构建/发布(Build) : <a href="Maven.html">Maven</a> | <a href="http://ant.apache.org/">Ant</a>
 </li>
 <li>
 Web Server : <a href="Apache.html">Apache</a> | <a href="Tomcat.html">Tomcat</a> | <a href="http://www.caucho.com/">Resin</a>
@@ -158,7 +159,7 @@ Web Server : <a href="Apache.html">Apache</a> | <a href="Tomcat.html">Tomcat</a>
 </ul>
 
 
-<h2 id="toc_1.3">Design</h2>
+<h2 id="toc_1.4">Design</h2>
 <ul>
 <li>
 <a href="Design.html">Design</a> | <a href="icons.html">图标</a> | <a href="fonts.html">字体(Fonts)</a> | <a href="Photoshop.html">Photoshop</a>
@@ -170,9 +171,9 @@ Web Server : <a href="Apache.html">Apache</a> | <a href="Tomcat.html">Tomcat</a>
 </ul>
 
 
-<h2 id="toc_1.4">Tools</h2>
+<h2 id="toc_1.5">Tools</h2>
 
-<h3 id="toc_1.4.1">浏览器(Browser)</h3>
+<h3 id="toc_1.5.1">浏览器(Browser)</h3>
 <ul>
 <li>
 <a href="IE.html">Internet Explorer(IE)</a> | <a href="Mozilla-Firefox.html">Mozilla-Firefox</a>(<a href="Firebug.html">Firebug</a>) |
@@ -186,7 +187,7 @@ Web Server : <a href="Apache.html">Apache</a> | <a href="Tomcat.html">Tomcat</a>
 <a href="http://gs.statcounter.com/">StatCounter Global Stats</a>
 </li>
 </ul>
-<h3 id="toc_1.4.2">编辑器(IDE/Editor)</h3>
+<h3 id="toc_1.5.2">编辑器(IDE/Editor)</h3>
 <ul>
 <li>
 <a href="Vim.html">Vim</a> | <a href="Emacs.html">Emacs</a> | <a href="Editplus.html">Editplus</a> |
@@ -223,7 +224,7 @@ Online IDE/Editor
 </ul>
 </ul>
 
-<h3 id="toc_1.4.3">画图</h3>
+<h3 id="toc_1.5.3">画图</h3>
 <ul>
 <li>
 <a href="UML.html">UML</a> | <a href="mind-mapping.html">思维导图</a> | <a href="Prototype-Drawings.html">原型图</a>
@@ -236,7 +237,7 @@ Online IDE/Editor
 </li>
 </ul>
 
-<h3 id="toc_1.4.4">文档(Docs/Slide)</h3>
+<h3 id="toc_1.5.4">文档(Docs/Slide)</h3>
 <ul>
 <li>
 Office
@@ -267,6 +268,9 @@ Docs
 <ul>
 <li>
 <a href="https://docs.google.com">Google Docs</a> | <a href="http://www.zoho.com/">ZOHO</a> | <a href="http://docs.com/">Docs for Facebook</a>
+</li>
+<li>
+<a href="http://typewith.me/">TypeWith.me</a>
 </li>
 <li>
 <a href="http://docs.wps.cn">WPS在线文档</a> | <a href="http://doc.163.com/">网易文档</a> | <a href="http://www.doc88.com/">道客巴巴</a>
@@ -361,7 +365,7 @@ Reader
 </ul>
 
 
-<h3 id="toc_1.4.5">桌面系统管理</h3>
+<h3 id="toc_1.5.5">桌面系统管理</h3>
 <ul>
 <li>
 <a href="file-explorer.html">文件管理</a>
@@ -588,7 +592,7 @@ cuteFTP |
 </li>
 <ul>
 <li>
-<a href="http://www.vandyke.com/products/securecrt/index.html">SecureCRT</a>
+<a href="SecureCRT.html">SecureCRT</a>
 </li>
 <li>
 <a href="PuTTY.html">PuTTY</a> | <a href="WinSCP.html">WinSCP</a> | <a href="http://en.poderosa.org/">Poderosa</a>
@@ -606,9 +610,20 @@ cuteFTP |
         <a href="http://www.nciku.cn/">n词酷</a>
 </li>
 </ul>
+<li>
+系统托盘
+</li>
+<ul>
+<li>
+<a href="http://www.teamcti.com/trayit/trayit.htm">trayit</a> <a href="http://www.trayit.com/">trayit.com</a>
+</li>
+<li>
+<a href="http://www.whitsoftdev.com/trayconizer/">Trayconizer</a> <a href="http://www.appinn.com/trayconizer/">@小众软件</a>
+</li>
+</ul>
 </ul>
 
-<h3 id="toc_1.4.6">操作系统</h3>
+<h3 id="toc_1.5.6">操作系统</h3>
 <ul>
 <li>
 <a href="OS.html">操作系统(Operating System)</a>
@@ -663,7 +678,7 @@ cuteFTP |
 </ul>
 </ul>
 
-<h3 id="toc_1.4.7">其他(Others)</h3>
+<h3 id="toc_1.5.7">其他(Others)</h3>
 <ul>
 <li>
 <a href="http://www.teamviewer.com/">TeamViewer</a>
@@ -678,10 +693,22 @@ cuteFTP |
 <a href="http://xbeta.info/">善用佳软</a> | <a href="http://www.appinn.com/">小众软件</a> |
     <a href="http://briian.com/">【重灌狂人】</a>
 </li>
+<li>
+QR 码
+</li>
+<ul>
+<li>
+<a href="http://zh.wikipedia.org/zh-cn/QR%E7%A2%BC">QR码 @wikipedia</a>
+</li>
+<li>
+<a href="http://qrcode.kaywa.com/">QR-Code Generator</a>, <a href="http://delivr.com/qr-code-generator">2</a>
+        <a href="http://zxing.appspot.com/generator/">3</a>
+</li>
+</ul>
 </ul>
 
 
-<h2 id="toc_1.5">Web</h2>
+<h2 id="toc_1.6">Web</h2>
 <ul>
 <li>
 <a href="Blogger.html">Blogger</a>
@@ -830,10 +857,21 @@ Web Page
 <li>
 <a href="http://www.pledgebank.com/">祈愿行</a>
 </li>
+<li>
+资讯
+</li>
+<ul>
+<li>
+<a href="http://cnbeta.com/">cnbeta.com</a>
+</li>
+<li>
+<a href="http://www.techcrunchchina.com/">TC中文</a> - 互联网创业资讯平台
+</li>
+</ul>
 </ul>
 
 
-<h2 id="toc_1.6">Tips</h2>
+<h2 id="toc_1.7">Tips</h2>
 <ul>
 <li>
 快速启动
@@ -849,7 +887,7 @@ Web Page
 </ul>
 
 
-<h2 id="toc_1.7">Others</h2>
+<h2 id="toc_1.8">Others</h2>
 <ul>
 <li>
 <a href="http://www.umiwi.com/">优米网</a> | <a href="http://www.iceo.com.cn/">中国企业家网</a>
@@ -932,7 +970,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月16日 12:47:06</p>
+    <p>本页最后修订于 2010年11月23日 13:50:43</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
