--- a/music.html
+++ b/music.html
@@ -93,6 +93,30 @@ Mehdi - Eastern Sunset
 <li>
 Asha - Sailing On The Silk Blue Sea
 </li>
+<li>
+Loreena McKennitt - Huron 'Beltane' Fire Dance
+</li>
+<li>
+Jeff Oster - Big Sur
+</li>
+<li>
+Adventure Cargo - Morning In Paradise
+</li>
+<li>
+Himekami - Distant Suns
+</li>
+<li>
+Yanni - Once Upon A Time
+</li>
+<li>
+Yanni - A Walk In The Rain
+</li>
+<li>
+Mehdi - Flight Of The Eagle
+</li>
+<li>
+Enya - Wild Child
+</li>
 </ul>
 
 <script type="text/javascript">
@@ -113,7 +137,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月08日 15:35:44</p>
+    <p>本页最后修订于 2010年11月23日 08:36:01</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
