--- a/C-Cpp.html
+++ b/C-Cpp.html
@@ -109,6 +109,16 @@
 《Linux Device Driver》2e ，为数不多的关于Linux设备驱动程序的好书。不过内容有些杂乱，如果您没有一些写驱动的经验，初次看会有些摸不着南北。国内翻译的是《Linux设备驱动程序》第二版，第一版，第二版的译者我都有很深的接触，不过总体上来说，虽然第二版翻译的有些不尽人意，但是相比第一版来说已经超出了一大截。要读这一本书，至少应该先找一些《计算机原理》《计算机体系结构》的书来马马虎虎读读，至少应该对硬件和计算机的工作过程有一些了解。
 </p>
 
+<ul>
+<li>
+DLL
+</li>
+<ul>
+<li>
+<a href="http://www.cygwin.com/cygwin-ug-net/dll.html">Building and Using DLLs</a>
+</li>
+</ul>
+</ul>
 
 <h2 id="toc_1.2">编译器/编辑器(Compiler,IDE,Editor)</h2>
 <ul>
@@ -173,7 +183,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月05日 02:12:54</p>
+    <p>本页最后修订于 2010年11月11日 22:23:18</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
