--- a/CSS-Hacks.html
+++ b/CSS-Hacks.html
@@ -142,6 +142,9 @@ p{
 <h2 id="toc_1.3">参考</h2>
 <ul>
 <li>
+<a href="http://www.webdevout.net/css-hacks">CSS Hacks</a>
+</li>
+<li>
 <a href="http://www.happinesz.cn/archives/1331/">说说CSS Hack 和向后兼容</a>
 </li>
 <li>
@@ -176,7 +179,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年08月19日 17:32:44</p>
+    <p>本页最后修订于 2010年11月10日 09:22:06</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
