--- a/CSS.html
+++ b/CSS.html
@@ -77,6 +77,11 @@
 <li>
 <a href="http://lesscss.org/">LESS</a> - Leaner CSS.
 </li>
+<ul>
+<li>
+<a href="http://www.k-zone.cn/zblog/post/less-css-1.html">用编程的方式来写CSS - LESS的应用</a>
+</li>
+</ul>
 </ul>
 
 <h2 id="toc_1.1">Calendar stamp</h2>
@@ -266,6 +271,12 @@ Online (<a href="http://www.css88.com/tool/csstidy/">1</a>,<a href="http://www.l
 <li>
 <a href="http://www.happinesz.cn/archives/1331/">说说CSS Hack 和向后兼容</a> - 内附详细的各浏览器 Hacks 列表。
 </li>
+<li>
+<a href="http://www.satzansatz.de/cssd/onhavinglayout.html">On having layout</a>
+</li>
+<li>
+<a href="http://www.positioniseverything.net/explorer/expandingboxbug.html">Internet Explorer 6 and the Expanding Box Problem</a>
+</li>
 </ul>
 
 <h2 id="toc_1.11">活动</h2>
@@ -300,7 +311,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年09月15日 22:07:24</p>
+    <p>本页最后修订于 2010年11月24日 01:59:17</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
