--- a/Compiler.html
+++ b/Compiler.html
@@ -7,11 +7,7 @@
 <!--[if IE]><script type="text/javascript" src="js/html5.js"></script><![endif]-->
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="/css/vim-like.css" />
-<style type="text/css" media="screen">
-    #searchbox{}
-    #searchbox input{font-size:2em; padding:5px 8px;}
-</style>
-<title>未找到(404) - 闲耘™.Wiki</title>
+<title>Compiler - 闲耘™.Wiki</title>
 </head>
 <body>
 <div id="wrapper">
@@ -27,40 +23,77 @@
     </ul>
 </nav>
 </header>
-<div id="container">
-    <article>
+<article>
 
-<h1 id="toc_1">没找到资源(404)</h1>
-<p>
-没有找到你访问的资源，请您尝试搜索。
-</p>
+<h1 id="toc_1">编译器(Compiler)</h1>
+<ul>
+<li>
+<a href="http://dinosaur.compilertools.net/">The Lex &amp; Yacc Page</a>
+</li>
+<li>
+<a href="http://dinosaur.compilertools.net/yacc/index.html">Yacc: Yet Another Compiler-Compiler</a>
+</li>
+<li>
+<a href="http://www.ibm.com/developerworks/cn/linux/sdk/lex/index.html">Yacc 与 Lex 快速入门</a>
+</li>
+<li>
+<a href="http://blog.chinaunix.net/u/13392/showart_203707.html">Lex-词法分析器生成器(M.E.Lesk,E.Schmidt著,中文翻译)</a>
+</li>
+<li>
+<a href="http://epaperpress.com/lexandyacc/">A Compact Guide to Lex &amp; Yacc</a>
+</li>
+<li>
+<a href="http://hi.baidu.com/yanghaoji/blog/item/55eca72f7829d0391f3089d3.html/cmtid/dd504031f820d417eac4af7c">C语言的lex词法分析和yacc语法分析</a>
+</li>
+</ul>
 
-<div style="margin:3em auto 10em;">
+<h2 id="toc_1.1">Books</h2>
+<ul>
+<li>
+<a href="http://oreilly.com.cn/book.php?bn=7-111-10721-7">LeX与Yacc(第二版)</a>
+</li>
+</ul>
+
+<h2 id="toc_1.2">JavaCC</h2>
+<ul>
+<li>
+<a href="https://javacc.dev.java.net/">Java Compiler Compiler</a>
+</li>
+<li>
+<a href="http://www.ibm.com/developerworks/cn/xml/x-javacc/part1/">JavaCC、解析树和 XQuery 语法，第 1 部分</a>
+    <a href="http://www.ibm.com/developerworks/cn/xml/x-javacc/part2/">第 2 部分</a>
+</li>
+<li>
+<a href="http://eclipse-javacc.sourceforge.net/">JavaCC Eclipse Plug-in for Eclipse</a>
+    <a href="http://eclipse_javacc.pagesperso-orange.fr/">JavaCC Eclipse Plug-in for Eclipse 2.1 - 3.0 - 3.1 - 3.2 - 3.3 - 3.4 - 3.5</a>
+</li>
+<li>
+<a href="http://mojo.codehaus.org/javacc-maven-plugin/">JavaCC Maven Plugin</a>
+</li>
+<li>
+<a href="http://www.engr.mun.ca/~theo/JavaCC-Tutorial/">The JavaCC Tutorial</a>
+</li>
+</ul>
+
+<script type="text/javascript">
+function onSearch(){
+    location.href = "search.html#"+document.getElementById("input_search").value;
+    return false;
+}
+</script>
+<div style="border-top:1px solid #ccc; background:#f6f6f6 none;padding:8px;">
     <form action="search.html" id="searchbox" onsubmit="return onSearch();">
         <input type="text" name="q" id="input_search" />
         <input type="submit" value="搜索" />
     </form>
 </div>
-
-
-    </article>
-    </div>
-
-<script type="text/javascript">
-function $(id){return document.getElementById(id);}
-$("input_search").focus();
-function onSearch(){
-    location.href = "search.html#"+($("input_search").value);
-    return false;
-}
-</script>
 </article>
 <footer>
     <a href="index.html" id="back-home">&lsaquo; 首页</a>
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月24日 01:35:20</p>
+    <p>本页最后修订于 2010年11月15日 22:03:14</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
