--- a/Images.html
+++ b/Images.html
@@ -37,6 +37,17 @@
 </ul>
 </ul>
 
+<h2 id="toc_1.1">Joke</h2>
+<ul>
+<li>
+<a href="http://www.hetemeel.com/einsteinform.php">爱因斯坦推荐的站点</a>
+</li>
+</ul>
+
+<p>
+<img src="http://2.bp.blogspot.com/_POl6bUDELqY/SKmcXiEsA-I/AAAAAAAAD68/FK5QThp5Zrg/s1600-h/einsteinshow.php.jpeg" />
+</p>
+
 <script type="text/javascript">
 function onSearch(){
     location.href = "search.html#"+document.getElementById("input_search").value;
@@ -55,7 +66,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年09月03日 11:36:46</p>
+    <p>本页最后修订于 2010年11月21日 14:48:11</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
