--- a/Links.html
+++ b/Links.html
@@ -140,6 +140,12 @@
 <li>
 <a href="http://hikejun.com/blog/">克军's Blog</a>
 </li>
+<li>
+<a href="http://rowez.com/">{ 弹指之间 }</a>
+</li>
+<li>
+<a href="http://blog.zhaojie.me">老赵点滴 - 追求编程之美</a>
+</li>
 </ul>
 
 <h2 id="toc_1.4">Softwares</h2>
@@ -218,7 +224,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月08日 19:13:21</p>
+    <p>本页最后修订于 2010年11月23日 09:49:05</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
