--- a/MooTools.html
+++ b/MooTools.html
@@ -7,11 +7,7 @@
 <!--[if IE]><script type="text/javascript" src="js/html5.js"></script><![endif]-->
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="/css/vim-like.css" />
-<style type="text/css" media="screen">
-    #searchbox{}
-    #searchbox input{font-size:2em; padding:5px 8px;}
-</style>
-<title>未找到(404) - 闲耘™.Wiki</title>
+<title>MooTools - 闲耘™.Wiki</title>
 </head>
 <body>
 <div id="wrapper">
@@ -27,40 +23,40 @@
     </ul>
 </nav>
 </header>
-<div id="container">
-    <article>
+<article>
 
-<h1 id="toc_1">没找到资源(404)</h1>
-<p>
-没有找到你访问的资源，请您尝试搜索。
-</p>
+<h1 id="toc_1">MooTools</h1>
+<ul>
+<li>
+<a href="http://www.mootools.net/">mootools</a>, <a href="http://github.com/mootools">@github</a>
+</li>
+<li>
+<a href="http://code.google.com/p/mootools-doc-cn/">Mootools文档中文版(v1.2)</a>
+</li>
+<li>
+<a href="http://w3er.com/javascript/source-analysis-of-mootools-core-js/">mootools 源码分析之 Core.js</a>
+</li>
+</ul>
 
-<div style="margin:3em auto 10em;">
+<script type="text/javascript">
+function onSearch(){
+    location.href = "search.html#"+document.getElementById("input_search").value;
+    return false;
+}
+</script>
+<div style="border-top:1px solid #ccc; background:#f6f6f6 none;padding:8px;">
     <form action="search.html" id="searchbox" onsubmit="return onSearch();">
         <input type="text" name="q" id="input_search" />
         <input type="submit" value="搜索" />
     </form>
 </div>
-
-
-    </article>
-    </div>
-
-<script type="text/javascript">
-function $(id){return document.getElementById(id);}
-$("input_search").focus();
-function onSearch(){
-    location.href = "search.html#"+($("input_search").value);
-    return false;
-}
-</script>
 </article>
 <footer>
     <a href="index.html" id="back-home">&lsaquo; 首页</a>
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月24日 01:35:20</p>
+    <p>本页最后修订于 2010年11月22日 10:06:51</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
