--- a/OpenID.html
+++ b/OpenID.html
@@ -30,6 +30,12 @@
 <li>
 <a href="http://openid.net/">OpenID Foundation</a>
 </li>
+<li>
+<a href="http://openid.net.cn/">OpenID: 分散式身份识别系统</a> - 中文
+</li>
+<li>
+<a href="http://zh.wikipedia.org/zh/OpenID">OpenID @wikipedia</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">Services</h2>
@@ -70,7 +76,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年07月16日 19:38:40</p>
+    <p>本页最后修订于 2010年11月20日 11:30:42</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
