--- a/Shell.html
+++ b/Shell.html
@@ -30,15 +30,62 @@
 <li>
 <a href="http://hi.baidu.com/superhackar/blog/item/b1e25a33e7e69e4bad4b5fa5.html">用vim做一个shell编辑器</a>
 </li>
+<li>
+<a href="http://baike.baidu.com/view/80110.htm">批处理 @百度百科</a>
+</li>
 </ul>
 
-<h2 id="toc_1.1">Books</h2>
+<h2 id="toc_1.1">PowerShell</h2>
+<ul>
+<li>
+<a href="http://blogs.msdn.com/b/powershell/">Windows PowerShell blog</a>
+</li>
+<li>
+<a href="http://msdn.microsoft.com/zh-cn/library/aa973757%28VS.85%29.aspx">Windows PowerShell 入门指南</a>
+    <a href="http://msdn.microsoft.com/en-us/library/aa973757%28VS.85%29.aspx">En</a>
+</li>
+<li>
+<a href="http://technet.microsoft.com/zh-cn/scriptcenter/powershell.aspx">通过 Windows PowerShell 编写脚本</a>
+    <a href="http://technet.microsoft.com/en-us/scriptcenter/powershell.aspx">En</a>
+</li>
+<li>
+<a href="http://zh.wikipedia.org/zh-cn/Windows_PowerShell">Windows_PowerShell @wikipedia</a>
+</li>
+<li>
+<a href="http://ss64.com/ps/">PowerShell command</a>
+</li>
+<li>
+<a href="http://www.cnpowershell.net/">PowerShell 中文网</a>
+</li>
+<li>
+<a href="http://www.microsoft.com/windowsserver2003/technologies/management/powershell/download.mspx">Download</a>
+</li>
+<li>
+<a href="http://powershell.com/cs/">PowerShell.com</a>
+</li>
+</ul>
+
+<h2 id="toc_1.2">Books</h2>
 <ul>
 <li>
 《Shell 脚本学习指南》
 </li>
 <li>
 《Linux Shell Scripting with Bash》
+</li>
+<li>
+《<a href="http://powershell.com/cs/blogs/ebook/">Master-PowerShell | With Dr. Tobias Weltner</a>》
+</li>
+</ul>
+
+<h2 id="toc_1.3">Tools</h2>
+<ul>
+<li>
+<a href="http://code.google.com/p/conque/">Conque</a> - Run interactive commands inside a Vim buffer
+    <a href="http://www.vim.org/scripts/script.php?script_id=2771">vimscript#2771@vim.org</a>
+</li>
+<li>
+<a href="http://www.wana.at/vimshell/">Vim-Shell</a>
 </li>
 </ul>
 
@@ -60,7 +107,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年08月27日 10:25:20</p>
+    <p>本页最后修订于 2010年11月18日 10:26:47</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
