--- a/UML.html
+++ b/UML.html
@@ -25,8 +25,11 @@
 </header>
 <article>
 
-<h1 id="toc_1">UML</h1>
+<h1 id="toc_1">Unified Modeling Language™(UML)</h1>
 <ul>
+<li>
+<a href="http://www.uml.org/">Object Management Group - UML</a>
+</li>
 <li>
 <a href="http://www.papyrusuml.org">Papyrus UML</a> - Open Source Tool for Graphical UML2 Modelling.
 </li>
@@ -56,7 +59,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年06月12日 16:27:19</p>
+    <p>本页最后修订于 2010年11月14日 02:19:06</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
