--- a/Vim-tips.html
+++ b/Vim-tips.html
@@ -35,7 +35,18 @@
 改变行距 <code>:set linespace=6</code>，默认 linespace=0
 </p>
 
-<h2 id="toc_1.2">导航</h2>
+<h2 id="toc_1.2">移动(motion)</h2>
+<p>
+<code>set wrap</code> 之后，对于过长的文本，自动跨行导致普通的 <code>j</code>/<code>k</code> 会看起来跳了一大段（跳到实际的下一行）。
+可以使用 <code>gj</code>/<code>gk</code> 命令进行跳转。
+如果希望默认的 <code>j</code>/<code>k</code> 就是这样的跳转方式，可以在 vimrc 中做自定义键盘映射：
+</p>
+<pre>
+nmap j gj
+nmap k gk
+</pre>
+
+<h2 id="toc_1.3">导航</h2>
 <p>
 Vim 中打开当前文件所在的目录。
 </p>
@@ -43,7 +54,7 @@ Vim 中打开当前文件所在的目录。
 :e %:h
 </pre>
 
-<h2 id="toc_1.3">搜索(Search) &amp; 替换</h2>
+<h2 id="toc_1.4">搜索(Search) &amp; 替换</h2>
 <p>
 Vim 搜索预览+替换技巧：
 </p>
@@ -91,7 +102,7 @@ Vim 搜索预览+替换技巧：
 :redir end
 </pre>
 
-<h2 id="toc_1.4">缩写 &amp; 补全</h2>
+<h2 id="toc_1.5">缩写 &amp; 补全</h2>
 <p>
 在程序代码（如C#）中，如果使用这样的缩写：
 </p>
@@ -144,7 +155,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年09月15日 14:24:37</p>
+    <p>本页最后修订于 2010年11月16日 15:50:32</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
