--- a/database.html
+++ b/database.html
@@ -26,6 +26,11 @@
 <article>
 
 <h1 id="toc_1">数据库(Database)</h1>
+<ul>
+<li>
+<a href="http://dtcc.it168.com/">数据库技术大会</a>
+</li>
+</ul>
 
 <h2 id="toc_1.1">MySQL</h2>
 <ul>
@@ -35,7 +40,15 @@
 <li>
 <a href="http://www.mysqlfront.de/wp/">MySQL Front</a>
 </li>
+<li>
+<a href="http://dev.mysql.com/doc/refman/5.1/zh/index.html">MySQL 5.1参考手册</a>
+    <a href="http://www.phpfans.net/manu/mysql5/">2</a>
+</li>
+<li>
+<a href="http://www.gracecode.com/archives/257/">MySQL Cheat Sheet 中文版</a>
+</li>
 </ul>
+
 <p>
 注册码：
 </p>
@@ -180,7 +193,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月08日 09:10:34</p>
+    <p>本页最后修订于 2010年11月13日 17:03:15</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
