--- a/duanzi.html
+++ b/duanzi.html
@@ -100,6 +100,25 @@
 前几天单位吃饭，一小年轻同事要了一瓶大雪碧，给大家倒了一圈，轮到自己的时候瓶子空了。于是该同事晃着雪碧瓶对服务员说： “这个还有吗？”服务员屁颠屁颠地跑过来，接过瓶子仔仔细细地检查了一遍，一脸诚恳地说：“没有了。” @footstone (2010/3/29)
 </p>
 
+
+
+<p>
+北京时间凌晨 3 点 20 分，在天安门广场，
+一小撮暴徒有预谋有计划有组织地制造反革命暴动事件
+他们明目张胆地发表反动演说，并以影射和赤裸裸的反革命语言
+猖狂的向我公安干警丧心病狂地高呼：
+你妈B，瞅你丫的操行，打你小丫挺的，跟你丫死磕。。。等反革命口号，
+气焰十分嚣张
+</p>
+
+<p>
+但是暴徒们猖獗之时，也正是他们灭亡之日
+我公安干警，解放军战士，勇敢地面向暴徒，斥责他们的反革命行径，
+与在场的革命群众一起，义正词严地高呼：
+你妈B，瞅你丫的操行，打你小丫挺的，跟你丫死磕。。。等革命口号
+保卫了社会主义祖国的伟大首都
+</p>
+
 <script type="text/javascript">
 function onSearch(){
     location.href = "search.html#"+document.getElementById("input_search").value;
@@ -118,7 +137,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年04月13日 23:34:19</p>
+    <p>本页最后修订于 2010年11月18日 12:18:17</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
