--- a/jQuery.html
+++ b/jQuery.html
@@ -53,6 +53,9 @@
 <li>
 <a href="http://desktop.sonspring.com/">jQuery Desktop</a>
 </li>
+<li>
+<a href="http://www.jqtouch.com/">jQTouch</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">API &amp; Docs</h2>
@@ -221,7 +224,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月05日 07:13:56</p>
+    <p>本页最后修订于 2010年11月14日 13:32:43</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
