--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
 </p>
 
 <div style="margin:3em auto 10em;">
-    <form action="search.html" id="searchbox" onsubmit="return onSearch();">
+    <form action="search.html" id="searchbox" onsubmit="return onSearch(this);">
         <input type="text" name="q" id="input_search" />
         <input type="submit" value="搜索" />
     </form>
@@ -49,8 +49,8 @@
 <script type="text/javascript">
 function $(id){return document.getElementById(id);}
 $("input_search").focus();
-function onSearch(){
-    location.href = "search.html#"+($("input_search").value);
+function onSearch(form){
+    location.href = "search.html#"+(form["q"].value);
     return false;
 }
 </script>
