--- a/index.html
+++ b/index.html
@@ -33,21 +33,22 @@
 <a href="Web-Design.html">Web-Design</a> | <a href="Links.html">Links</a>
 </li>
 <li>
-<a href="JavaScript.html">JavaScript</a> | <a href="jQuery.html">jQuery</a> | <a href="YUI.html">YUI</a>(<a href="kissy.html">kissy</a>) | <a href="Prototype.html">Prototype</a> | <a href="MooTools.html">MooTools</a> |
+<a href="JavaScript.html">JavaScript</a> | <a href="jQuery.html">jQuery</a> | <a href="YUI.html">YUI</a> | <a href="Prototype.html">Prototype</a> | <a href="MooTools.html">MooTools</a> |
     <a href="ExtJS.html">ExtJS</a> | <a href="http://www.dojotoolkit.org/">Dojo</a> | <a href="http://www.asp.net/ajax/">MS Ajax</a> |
-    <a href="http://directwebremoting.org">DWR</a> |
-    <a href="http://ajaxrpc.com/">AJAXRPC</a>(<a href="http://ajaxrpc.com/cn/index.html">中文</a>)
+        <a href="http://directwebremoting.org">DWR</a> |
+        <a href="http://ajaxrpc.com/">AJAXRPC</a>(<a href="http://ajaxrpc.com/cn/index.html">中文</a>)
 </li>
+<ul>
+<li>
+<a href="kissy.html">kissy</a> | <a href="http://arale.alipay.net/">Arale</a>
+</li>
+</ul>
 <li>
 <a href="CSS.html">CSS</a>(<a href="CSS-Framework.html">CSS-Framework</a>, <a href="CSS-Hacks.html">CSS-Hacks</a>) | <a href="CSS3.html">CSS3</a>
 </li>
 <li>
 <a href="HTML.html">HTML</a> | <a href="HTML5.html">HTML5</a>(<a href="Canvas-SVG-VML.html">Canvas-SVG-VML</a>) | <a href="HTML-Escape.html">HTML特殊字符</a> |
     <a href="Microformats.html">Microformats</a> | <a href="XML.html">XML</a> | <a href="JSON.html">JSON</a> | <a href="YAML.html">YAML</a><br />
-</li>
-<li>
-<a href="LaTeX.html">LaTeX</a> | <a href="Wiki.html">Wiki</a> | <a href="Markdown.html">Markdown</a> | <a href="Textile.html">Textile</a> | <a href="reStructuredText.html">reStructuredText</a>
-    <a href="http://antbsd.twbbs.org/~ant/wordpress/?p=2720">淺談輕量級標記語言</a>
 </li>
 <li>
 <div class="toc">
@@ -63,10 +64,11 @@
 <li><a href="#toc_1.5.1">浏览器(Browser)</a></li>
 <li><a href="#toc_1.5.2">编辑器(IDE/Editor)</a></li>
 <li><a href="#toc_1.5.3">画图</a></li>
-<li><a href="#toc_1.5.4">文档(Docs/Slide)</a></li>
-<li><a href="#toc_1.5.5">桌面系统管理</a></li>
-<li><a href="#toc_1.5.6">操作系统</a></li>
-<li><a href="#toc_1.5.7">其他(Others)</a></li>
+<li><a href="#toc_1.5.4">标尺(Ruler)</a></li>
+<li><a href="#toc_1.5.5">文档(Docs/Slide)</a></li>
+<li><a href="#toc_1.5.6">桌面系统管理</a></li>
+<li><a href="#toc_1.5.7">操作系统</a></li>
+<li><a href="#toc_1.5.8">其他(Others)</a></li>
 </ul>
 <li><a href="#toc_1.6">Web</a></li>
 <li><a href="#toc_1.7">Tips</a></li>
@@ -74,14 +76,18 @@
 </ul>
 </ul>
 </div>
+<a href="LaTeX.html">LaTeX</a> | <a href="Wiki.html">Wiki</a> | <a href="Markdown.html">Markdown</a> | <a href="Textile.html">Textile</a> | <a href="reStructuredText.html">reStructuredText</a>
+    <a href="http://antbsd.twbbs.org/~ant/wordpress/?p=2720">淺談輕量級標記語言</a>
+</li>
+<li>
 <a href="Velocity.html">Velocity</a> | <a href="mustache.html">mustache</a> | <a href="FreeMarker.html">FreeMarker</a>
 </li>
 <li>
 <a href="RSS.html">RSS</a> | <a href="Atom.html">Atom</a>
 </li>
 <li>
-<a href="C-Cpp.html">C/Cpp</a> | <a href="Java.html">Java</a> | <a href="Scala.html">Scala</a> | <a href="PHP.html">PHP</a> | <a href="Python.html">Python</a> | <a href="Perl.html">Perl</a> |
-    <a href="http://erlang-china.org/">Erlang-China</a> - erlang 中文社区。
+<a href="C-Cpp.html">C/Cpp</a> | <a href="Java.html">Java</a> | <a href="Scala.html">Scala</a> | <a href="PHP.html">PHP</a> | <a href="Python.html">Python</a> | <a href="Perl.html">Perl</a> | <a href="http://www.ruby-lang.org/">Ruby</a>
+    <a href="http://erlang-china.org/">Erlang 中文社区</a> | <a href="http://zhdoc.bitsrv.net/django/html/index.html">Django documentation</a>
 </li>
 <li>
 <a href="ActionScript.html">ActionScript/Flash</a> | <a href="Flex.html">Flex</a> | <a href="Silverlight.html">Silverlight</a> | <a href="Processing.html">Processing</a>
@@ -100,6 +106,12 @@ Code Prettify/Syntax Highligjht
 </li>
 <ul>
 <li>
+<a href="http://codemirror.net/">CodeMirror</a>
+</li>
+<li>
+<a href="http://codepress.sourceforge.net/">CodePress</a>
+</li>
+<li>
 <a href="http://shjs.sourceforge.net/">SHJS</a> |
         <a href="http://alexgorbatchev.com/SyntaxHighlighter/">SyntaxHighlighter</a> |
         <a href="http://code.google.com/p/jssc/">jssc</a>(<a href="http://army8735.org/">army8735.org</a>) |
@@ -117,6 +129,9 @@ Code Prettify/Syntax Highligjht
 <a href="Compiler.html">编译器</a>
 </li>
 <li>
+<a href="Algorithm.html">算法</a>
+</li>
+<li>
 <a href="http://www.canonical.org/~kragen/tao-of-programming.html">The Tao Of Programming</a>,
     <a href="http://osiris.urbanna.net/tao.html">2</a>,
     <a href="http://livecn.huasing.org/tao_of_programming.htm">《编程之道》</a> 文言文版 by Livecn，
@@ -132,6 +147,10 @@ Code Prettify/Syntax Highligjht
     <a href="NoSQL.html">NoSQL</a>
     Oracle | MySQL | mongodb | pg | SQLite | couchdb
 </li>
+<li>
+<a href="http://hadoop.apache.org/">Hadoop</a> | <a href="http://hive.apache.org/">Hive</a>
+    <a href="http://wiki.apache.org/hadoop/Hive">wiki</a>
+</li>
 </ul>
 
 <h2 id="toc_1.3">开发工具(Develop)</h2>
@@ -142,6 +161,11 @@ Code Prettify/Syntax Highligjht
 <li>
 Web Server : <a href="Apache.html">Apache</a> | <a href="Tomcat.html">Tomcat</a> | <a href="http://www.caucho.com/">Resin</a>
 </li>
+<ul>
+<li>
+<a href="http://www.appservnetwork.com/">AppServ Open Project</a>
+</li>
+</ul>
 <li>
 <a href="version-control-system.html">版本管理系统</a>
 </li>
@@ -152,10 +176,33 @@ Web Server : <a href="Apache.html">Apache</a> | <a href="Tomcat.html">Tomcat</a>
 <li>
 <a href="codes-server.html">代码托管服务</a>
 </li>
+<li>
+<a href="http://j.mp/douban-javascript">豆瓣Javascript代码风格规范</a> | <a href="http://j.mp/douban-css">豆瓣CSS开发规范</a>
+</li>
 </ul>
 <li>
 <a href="nginx.html">nginx</a>
 </li>
+<li>
+<a href="http://lamp.linux.gov.cn/jinbuguo_florilegium.html">金步国作品列表</a>
+</li>
+<li>
+Apps Engine
+</li>
+<ul>
+<li>
+<a href="Google-App-Engine.html">Google-App-Engine</a>
+</li>
+<li>
+<a href="http://open.taobao.com/">淘宝网开放平台</a>
+</li>
+<li>
+<a href="http://opensrc.alipay.net/">支付宝外部接口资源平台</a>
+</li>
+<li>
+<a href="http://sae.sina.com.cn/">Sina App Engine</a>
+</li>
+</ul>
 </ul>
 
 
@@ -166,6 +213,7 @@ Web Server : <a href="Apache.html">Apache</a> | <a href="Tomcat.html">Tomcat</a>
 </li>
 <li>
 取色器 : <a href="http://www.colorschemer.com/">Color Schemer</a> |
+    <a href="http://kuler.adobe.com/">kuler</a> |
     <a href="http://color.aurlien.net/">Piknik Color Picker</a>
 </li>
 </ul>
@@ -235,9 +283,34 @@ Online IDE/Editor
 <li>
 <a href="Gantt-chart.html">甘特图</a>
 </li>
+<li>
+<a href="http://shutter-project.org/">Shutter</a>
+</li>
 </ul>
 
-<h3 id="toc_1.5.4">文档(Docs/Slide)</h3>
+<h3 id="toc_1.5.4">标尺(Ruler)</h3>
+<ul>
+<li>
+<a href="http://www.spadixbd.com/freetools/jruler.htm">JR Screen Ruler (For Windows 95/98/2000/NT/ME/XP)</a>
+</li>
+<li>
+<a href="http://wonderwebware.com/screen-ruler/">Screen Ruler</a>
+</li>
+<li>
+<a href="http://www.arulerforwindows.com/">A Ruler For Windows</a>
+</li>
+<li>
+<a href="http://www.pascal.com/software/freeruler/">Free Ruler</a> - a free screen ruler for Mac OS X
+</li>
+<li>
+<a href="http://gnomecoder.wordpress.com/screenruler/">ScreenRuler</a>
+</li>
+<li>
+<a href="http://www.microfox.com/">Screen Ruler</a>
+</li>
+</ul>
+
+<h3 id="toc_1.5.5">文档(Docs/Slide)</h3>
 <ul>
 <li>
 Office
@@ -362,10 +435,21 @@ Reader
 <a href="Foxit-Reader.html">Foxit-Reader</a> | <a href="ePub.html">ePub</a> | <a href="DjVu.html">DjVu</a> | <a href="chm.html">chm</a> | <a href="http://www.jongde.com/sg/index.asp">iRead</a>
 </li>
 </ul>
+<li>
+PDF
+</li>
+<ul>
+<li>
+<a href="http://www.primopdf.com/">PDF Converter</a> <a href="http://www.primopdf.com/online.aspx">Online</a>
+</li>
+<li>
+<a href="http://paranimage.com/8-html-to-pdf-online-tools/">8款HTML转PDF在线工具</a>
+</li>
+</ul>
 </ul>
 
 
-<h3 id="toc_1.5.5">桌面系统管理</h3>
+<h3 id="toc_1.5.6">桌面系统管理</h3>
 <ul>
 <li>
 <a href="file-explorer.html">文件管理</a>
@@ -376,6 +460,37 @@ Reader
         <a href="Unreal-Commander.html">Unreal-Commander</a> | <a href="http://doublecmd.sourceforge.net/">Double Commander</a> |
         <a href="http://www.midnight-commander.org/">Midnight Commander</a>
 </li>
+<li>
+<a href="http://tabbles.net">Tabbles</a>
+</li>
+</ul>
+<li>
+双屏
+</li>
+<ul>
+<li>
+<a href="http://ued.koubei.com/?p=880">双屏显示提升前端开发10%工作效率</a>
+</li>
+<li>
+<a href="http://www.qianduan.net/80-more-absolutely-beautiful-dual-screen-wallpaper.html">80多个绝对漂亮的双屏壁纸</a>
+</li>
+<li>
+<a href="http://bbs.pcpop.com/060427/20738.html">手把手教你组建双屏LCD系统</a>
+</li>
+</ul>
+<li>
+窗口管理
+</li>
+<ul>
+<li>
+<a href="http://awesome.naquadah.org/">awesome window manager</a>
+</li>
+<li>
+<a href="http://linuxtoy.org/archives/awesome.html">平铺式窗口管理器——Awesome</a>
+</li>
+<li>
+<a href="http://www.ibm.com/developerworks/cn/linux/l-cpion.html">功能丰富的 Perl: 有趣的 Ion 窗口管理器</a>
+</li>
 </ul>
 <li>
 搜索(Search)
@@ -383,6 +498,9 @@ Reader
 <ul>
 <li>
 <a href="Everything.html">Everything</a>
+</li>
+<li>
+<a href="http://totalfinder.binaryage.com/">TotalFinder</a> - for mac.
 </li>
 <li>
 <a href="http://www.google.com/realtime">Google Realtime Search</a> <a href="http://48ers.com/">48ers - Realtime Social Search</a>
@@ -404,9 +522,6 @@ Reader
 <a href="Archive.html">存档工具(7-zip/zip/rar)</a>
 </li>
 <li>
-<a href="Virtual-Machine.html">虚拟机(Virtual Machine)</a>
-</li>
-<li>
 <a href="Virtual-Desktop.html">虚拟桌面(Virtual Desktop)</a>
 </li>
 <li>
@@ -423,7 +538,7 @@ Player
 <a href="http://splayer.org/">射手播放器</a>
 </li>
 <li>
-<a href="http://www.pptv.com/">PPTV</a><sup><small>PPLive</small></sup> | <a href="http://www.pps.tv/">PPS.tv</a>^<a href="http://www.ppstream.com/">PPStream</a>^
+<a href="http://www.pptv.com/">PPTV</a><sup><small>PPLive</small></sup>(Win2003会造成卡死) | <a href="http://www.pps.tv/">PPS.tv</a>^<a href="http://www.ppstream.com/">PPStream</a>^
 </li>
 </ul>
 <li>
@@ -435,6 +550,12 @@ Photos
 </li>
 <li>
 <a href="http://www.irfanview.com/">IrfanView</a> | <a href="screenshots.html">截屏工具</a>
+</li>
+<li>
+<a href="http://min.us/">Minus</a> - Share simply.
+</li>
+<li>
+<a href="http://img.gd/">img.gd</a>
 </li>
 </ul>
 <li>
@@ -541,6 +662,9 @@ Windows Registry Editor Version 5.00
 <li>
 <a href="http://www.easymule.com/zh-cn/">电驴</a> <a href="http://www.emule.org.cn/">2</a> <a href="http://www.dianlv.com/">所谓的电驴自由版</a>
 </li>
+<li>
+<a href="http://www.verycd.com/">VeryCD</a> | <a href="http://www.simplecd.org/">SimpleCD</a>
+</li>
 </ul>
 <li>
 文件同步
@@ -556,6 +680,20 @@ Windows Registry Editor Version 5.00
 <ul>
 <li>
 <a href="ZoomIt.html">ZoomIt</a>
+</li>
+</ul>
+<li>
+录屏软件
+</li>
+<ul>
+<li>
+<a href="http://recordmydesktop.sourceforge.net/">GTK-RecordMyDesktop</a>
+</li>
+<li>
+<a href="https://launchpad.net/kazam">Kazam</a>
+</li>
+<li>
+<a href="https://launchpad.net/tibesti">Tibesti</a>
 </li>
 </ul>
 <li>
@@ -623,10 +761,13 @@ cuteFTP |
 </ul>
 </ul>
 
-<h3 id="toc_1.5.6">操作系统</h3>
+<h3 id="toc_1.5.7">操作系统</h3>
 <ul>
 <li>
 <a href="OS.html">操作系统(Operating System)</a>
+</li>
+<li>
+<a href="Virtual-Machine.html">虚拟机(Virtual Machine)</a>
 </li>
 <li>
 <a href="RAID.html">磁盘阵列</a>
@@ -678,10 +819,10 @@ cuteFTP |
 </ul>
 </ul>
 
-<h3 id="toc_1.5.7">其他(Others)</h3>
+<h3 id="toc_1.5.8">其他(Others)</h3>
 <ul>
 <li>
-<a href="http://www.teamviewer.com/">TeamViewer</a>
+<a href="http://www.teamviewer.com/">TeamViewer</a> <a href="http://www.teamviewer.com/zh/">中文</a>
 </li>
 <li>
 <a href="http://www.oldapps.com/">Old Version Download</a>
@@ -718,10 +859,10 @@ SNS
 </li>
 <ul>
 <li>
-<a href="Twitter.html">Twitter</a> | <a href="Google-Wave.html">Google-Wave</a> | <a href="http://www.plurk.com/">Plurk</a> | <a href="http://renjian.com/">人间网</a>
+<a href="Google-Wave.html">Google-Wave</a> | <a href="http://www.plurk.com/">Plurk</a> | <a href="http://renjian.com/">人间网</a>
 </li>
 <li>
-<a href="http://about.me/">about.me</a> | <a href="https://join.me/">join.me</a>
+<a href="http://about.me/">about.me</a> | <a href="https://join.me/">join.me</a> | <a href="http://notify.me/">notify.me</a>
 </li>
 </ul>
 <li>
@@ -734,6 +875,9 @@ SNS
 </li>
 <li>
 <a href="maps.html">地图(Maps)</a>
+</li>
+<li>
+<a href="http://www.postrank.com/">PostRank</a>
 </li>
 <li>
 云计算
@@ -763,6 +907,25 @@ SNS
     <a href="http://www.yeepay.com/">易宝支付</a> | <a href="http://www.beijing.com.cn/">首信易支付</a> |
     <a href="https://www.99bill.com/">快钱</a> | <a href="https://www.172.com/">172 捷银</a> |
     <a href="https://www.paypal.com/cn/">贝宝</a> | <a href="http://www.cncard.net/">云网支付</a>
+</li>
+<li>
+团购
+</li>
+<ul>
+<li>
+<a href="http://tuan.koubei.com/">口碑团购网</a> | <a href="http://www.meituan.com/">美团网</a> |
+        <a href="http://tuan.qq.com/">QQ团</a> |
+        <a href="http://t.dianping.com/">点评网</a> | <a href="http://www.groupon.cn">团宝网</a> |
+        <a href="http://www.nuomi.com/">糯米网</a> | <a href="http://www.ftuan.com/">F团</a> |
+        <a href="http://www.gtuan.com/">G团</a> | <a href="http://tuan.sohu.com/">搜狐爱家团</a> |
+        <a href="http://www.manzuo.com/">满座</a>
+</li>
+<li>
+<a href="http://tuangou.xungou.com/">团讯</a>
+</li>
+</ul>
+<li>
+<a href="http://nanrenwa.com/">男人袜</a>
 </li>
 <li>
 快捷入口
@@ -823,6 +986,9 @@ SNS
         <a href="http://wp.me">wp.me</a> | <a href="http://bit.ly/">bit.ly</a> |
         <a href="http://su.pr/">Su.pr</a> | <a href="http://a.md/">A.MD</a>
 </li>
+<li>
+<a href="http://unshort.me/">Unshorten any URL</a>
+</li>
 </ul>
 <li>
 投票系统
@@ -862,6 +1028,12 @@ Web Page
 </li>
 <ul>
 <li>
+<a href="http://solidot.org/">Solidot</a>
+</li>
+<li>
+<a href="http://www.infoq.com/">InfoQ</a>
+</li>
+<li>
 <a href="http://cnbeta.com/">cnbeta.com</a>
 </li>
 <li>
@@ -893,13 +1065,10 @@ Web Page
 <a href="http://www.umiwi.com/">优米网</a> | <a href="http://www.iceo.com.cn/">中国企业家网</a>
 </li>
 <li>
-<a href="http://solidot.org/">Solidot</a>
-</li>
-<li>
 <a href="http://jobsdigg.com/">jobsDigg</a>
 </li>
 <li>
-<a href="Books.html">Books</a> | <a href="English.html">英语</a>
+<a href="Books.html">书籍(books)</a> | <a href="English.html">英语</a>
 </li>
 <li>
 <a href="edu.html">教育</a> | <a href="Financial.html">金融/财务</a> | <a href="math.html">数学</a> | <a href="National-Geographic.html">国家地理</a> | <a href="Magazine.html">杂志</a> |
@@ -920,6 +1089,9 @@ Web Page
 <a href="iGo.html">圍棋</a> | <a href="Chess.html">象棋</a> | <a href="Harmonica.html">口琴</a> | <a href="sports.html">体育运动</a>
 </li>
 <li>
+<a href="Games.html">游戏</a>
+</li>
+<li>
 <a href="Online-TVs.html">网络电视(TV)</a> | <a href="video.html">影视</a> | <a href="music.html">音乐</a> | <a href="VoIP.html">网络电话</a>
 </li>
 <li>
@@ -930,6 +1102,9 @@ Web Page
 </li>
 <li>
 <a href="ClassicQuotations.html">经典语录</a> | <a href="duanzi.html">段子</a> | <a href="text-smile.html">text-smile</a>
+</li>
+<li>
+<a href="http://www.mingtou.com/">名头网</a> | <a href="http://www.57name.com/">我起名</a>
 </li>
 <li>
 硬件(Hardware)
@@ -970,7 +1145,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月23日 13:50:43</p>
+    <p>本页最后修订于 2010年12月20日 00:07:08</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
