--- a/jQuery.html
+++ b/jQuery.html
@@ -34,7 +34,8 @@
 <li><a href="#toc_1.1">API &amp; Docs</a></li>
 <li><a href="#toc_1.2">Games</a></li>
 <li><a href="#toc_1.3">Video</a></li>
-<li><a href="#toc_1.4">UI</a></li>
+<li><a href="#toc_1.4">Plugins</a></li>
+<li><a href="#toc_1.5">UI</a></li>
 </ul>
 </ul>
 </div>
@@ -88,7 +89,19 @@
 </li>
 </ul>
 
-<h2 id="toc_1.4">UI</h2>
+
+<h2 id="toc_1.4">Plugins</h2>
+<ul>
+<li>
+<a href="http://bassistance.de/jquery-plugins/jquery-plugin-validation/">jQuery plugin: Validation</a>
+</li>
+<li>
+<a href="http://plugins.jquery.com/project/pagination">Pagination</a>
+</li>
+</ul>
+
+
+<h2 id="toc_1.5">UI</h2>
 <ul>
 <li>
 <a href="http://jquery.thewikies.com/browser/">jQuery Browser Plugin</a>
@@ -224,7 +237,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月14日 13:32:43</p>
+    <p>本页最后修订于 2010年11月30日 16:35:40</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
