--- a/ActionScript.html
+++ b/ActionScript.html
@@ -104,7 +104,74 @@
 </li>
 </ul>
 
-<h2 id="toc_2.1">让Flash位于浮动层之下</h2>
+
+
+<h2 id="toc_2.1">系统剪贴板</h2>
+<ul>
+<li>
+<a href="http://code.google.com/p/zeroclipboard/">Zero Clipboard</a>
+</li>
+</ul>
+
+<h2 id="toc_2.2">Player</h2>
+<ul>
+<li>
+<a href="http://www.longtailvideo.com/players/jw-flv-player/">JW Player</a> - opensource flash Player
+</li>
+</ul>
+
+<h2 id="toc_2.3">Upload File</h2>
+<ul>
+<li>
+<a href="http://swfupload.org/">SWFUpload</a> ^<a href="http://code.google.com/p/swfupload/">google code</a>^
+</li>
+<li>
+<a href="http://developer.yahoo.com/yui/uploader/">YUI Uploader</a>
+</li>
+<li>
+<a href="http://xpz.javaeye.com/blog/126828">利用Flash上传大文件：swfupload修改以及详细说明</a>
+</li>
+</ul>
+
+<h2 id="toc_2.4">Frameworks</h2>
+<ul>
+<li>
+<a href="http://www.aswing.org/">AsWing</a> <a href="http://cn.aswing.org/">中文</a>
+</li>
+</ul>
+
+<h2 id="toc_2.5">Project</h2>
+<ul>
+<li>
+Open Flash Chart
+</li>
+<ul>
+<li>
+<a href="http://teethgrinder.co.uk/open-flash-chart-2/">Open Flash Chart 2</a> <a href="http://teethgrinder.co.uk/open-flash-chart/">v1</a> <a href="http://openflashchart.com/">home</a> <a href="http://sourceforge.net/projects/openflashchart/">project</a>
+</li>
+<li>
+<a href="http://code.google.com/p/jofc2/">Java API for Open Flash Chart 2</a>
+</li>
+<li>
+<a href="http://openflashchartlib.codeplex.com/">Open Flash Chart Lib</a> - A .NET library for OpenFlashChart control.
+</li>
+<li>
+<a href="http://code.google.com/p/open-flash-chart-python/">Python API for Open Flash Chart</a>
+</li>
+<li>
+<a href="http://code.google.com/p/ofcgwt/">Open Flash Chart for GWT</a>
+</li>
+<li>
+<a href="http://drupal.org/project/open_flash_chart_api">Open Flash Chart API</a> <a href="http://drupal.org/project/ofc_api">old</a>
+</li>
+<li>
+<a href="http://ofc.net23.net/">Open Flash Chart 正体中文教程</a> <a href="http://ofc.net23.net/v2/">显示数值的修改版</a>
+</li>
+</ul>
+</ul>
+
+<h2 id="toc_2.6">Notes</h2>
+<h3 id="toc_2.6.1">让Flash位于浮动层之下</h3>
 <p>
 1. 将 Flash 设置为透明：
 </p>
@@ -142,64 +209,6 @@ wmode 属性/参数
 如果忽略此属性，默认值为 Window。仅适用于 object。
 </blockquote>
 
-
-<h2 id="toc_2.2">系统剪贴板</h2>
-<ul>
-<li>
-<a href="http://code.google.com/p/zeroclipboard/">Zero Clipboard</a>
-</li>
-</ul>
-
-<h2 id="toc_2.3">Player</h2>
-<ul>
-<li>
-<a href="http://www.longtailvideo.com/players/jw-flv-player/">JW Player</a> - opensource flash Player
-</li>
-</ul>
-
-<h2 id="toc_2.4">Upload File</h2>
-<ul>
-<li>
-<a href="http://swfupload.org/">SWFUpload</a> ^<a href="http://code.google.com/p/swfupload/">google code</a>^
-</li>
-<li>
-<a href="http://developer.yahoo.com/yui/uploader/">YUI Uploader</a>
-</li>
-<li>
-<a href="http://xpz.javaeye.com/blog/126828">利用Flash上传大文件：swfupload修改以及详细说明</a>
-</li>
-</ul>
-
-<h2 id="toc_2.5">Project</h2>
-<ul>
-<li>
-Open Flash Chart
-</li>
-<ul>
-<li>
-<a href="http://teethgrinder.co.uk/open-flash-chart-2/">Open Flash Chart 2</a> <a href="http://teethgrinder.co.uk/open-flash-chart/">v1</a> <a href="http://openflashchart.com/">home</a> <a href="http://sourceforge.net/projects/openflashchart/">project</a>
-</li>
-<li>
-<a href="http://code.google.com/p/jofc2/">Java API for Open Flash Chart 2</a>
-</li>
-<li>
-<a href="http://openflashchartlib.codeplex.com/">Open Flash Chart Lib</a> - A .NET library for OpenFlashChart control.
-</li>
-<li>
-<a href="http://code.google.com/p/open-flash-chart-python/">Python API for Open Flash Chart</a>
-</li>
-<li>
-<a href="http://code.google.com/p/ofcgwt/">Open Flash Chart for GWT</a>
-</li>
-<li>
-<a href="http://drupal.org/project/open_flash_chart_api">Open Flash Chart API</a> <a href="http://drupal.org/project/ofc_api">old</a>
-</li>
-<li>
-<a href="http://ofc.net23.net/">Open Flash Chart 正体中文教程</a> <a href="http://ofc.net23.net/v2/">显示数值的修改版</a>
-</li>
-</ul>
-</ul>
-
 <script type="text/javascript">
 function onSearch(){
     location.href = "search.html#"+document.getElementById("input_search").value;
@@ -218,7 +227,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月24日 01:35:20</p>
+    <p>本页最后修订于 2010年11月27日 16:10:44</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
