--- a/Apache.html
+++ b/Apache.html
@@ -37,6 +37,22 @@
 <a href="http://lamp.linux.gov.cn/Apache/ApacheMenu/">Apache HTTP Server Version 2.2 文档</a>
     <a href="http://man.chinaunix.net/newsoft/Apache2.2_chinese_manual/index.html">2</a>
     <a href="http://www.phpchina.com/manual/apache/">3</a>
+    <a href="http://apache.jz123.cn/">4</a>
+</li>
+</ul>
+
+<h2 id="toc_1.1">Notes</h2>
+<ul>
+<li>
+<a href="apache-tomcat-integration.html">Apache 与 Tomcat 整合</a>
+</li>
+<li>
+<a href="apache-jboss-integration.html">Apache 与 jboss 整合</a>
+<pre>
+httpd -k install -n apache
+
+httpd -?
+</pre>
 </li>
 </ul>
 
@@ -58,7 +74,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月10日 13:50:10</p>
+    <p>本页最后修订于 2010年12月19日 15:17:06</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
