--- a/Books.html
+++ b/Books.html
@@ -45,6 +45,13 @@
 <li>
 <a href="http://zh.wikisource.org/">维基文库 - 自由的图书馆</a>
 </li>
+<li>
+<a href="http://bookfor.us/">摆摆书架</a>
+</li>
+<li>
+<a href="http://www.gutenberg.org/">古藤堡计划</a> <a href="http://www.gutenberg.org/browse/languages/zh">中文</a>
+    <a href="http://zh.wikipedia.org/zh-cn/%E5%8F%A4%E8%85%BE%E5%A0%A1%E8%AE%A1%E5%88%92">@wikipedia</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">Open Source</h2>
@@ -101,7 +108,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年10月15日 14:34:07</p>
+    <p>本页最后修订于 2010年12月16日 15:39:37</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
