--- a/C-Cpp.html
+++ b/C-Cpp.html
@@ -144,7 +144,29 @@ DLL
 </li>
 </ul>
 
-<h2 id="toc_1.4">Books</h2>
+
+<h2 id="toc_1.4">RegExp</h2>
+<ul>
+<li>
+<a href="http://www.boost.org/">boost</a>
+</li>
+<li>
+<a href="http://www.pcre.org/">PCRE</a>
+</li>
+<li>
+<a href="http://code.google.com/p/libtpl/">Text Processing Library(TPL)</a>
+    <a href="http://cpp.winxgui.com/cn:tpl-1-0-00">http://cpp.winxgui.com/cn:tpl-1-0-00</a>
+</li>
+<li>
+<a href="http://www.regexlab.com/">deelx</a>
+</li>
+<li>
+<a href="http://msdn.microsoft.com/zh-cn/library/4384yce9.aspx">C++ 正则表达式</a>
+</li>
+</ul>
+
+
+<h2 id="toc_1.5">Books</h2>
 <ul>
 <li>
 <a href="http://www.kohala.com/start/apue.html">Advanced Programming in the UNIX Environment</a> - Addison-Wesley.
@@ -155,7 +177,7 @@ DLL
 </li>
 </ul>
 
-<h2 id="toc_1.5">Blog</h2>
+<h2 id="toc_1.6">Blog</h2>
 <ul>
 <li>
 <a href="http://blog.codingnow.com/">云风的 BLOG</a>
@@ -183,7 +205,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月11日 22:23:18</p>
+    <p>本页最后修订于 2010年12月03日 00:37:37</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
