--- a/Canvas-SVG-VML.html
+++ b/Canvas-SVG-VML.html
@@ -168,6 +168,9 @@
 <li>
 <a href="http://www.effectgames.com/demos/canvascycle/?sound=1">Canvas Cycles</a>
 </li>
+<li>
+<a href="http://agent8ball.com/">Agent 8 Ball</a> - 台球
+</li>
 </ul>
 
 
@@ -240,7 +243,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月06日 23:24:10</p>
+    <p>本页最后修订于 2010年12月06日 12:29:21</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
