--- a/Design.html
+++ b/Design.html
@@ -67,10 +67,24 @@
 <h2 id="toc_1.2">假文填充</h2>
 <ul>
 <li>
-<a href="http://more.handlino.com/">MoreText.js</a> - 一用就爱上的中文假文生成器。
+<a href="http://zh.wikipedia.org/zh-cn/Lorem_ipsum">Lorem ipsum</a>
 </li>
 <li>
+<a href="http://more.handlino.com/">MoreText.js</a> - 一用就爱上的中文假文生成器。
+</li>
+<ul>
+<li>
 <a href="http://github.com/c9s/more.vim">more.vim</a>
+</li>
+</ul>
+<li>
+<a href="http://www.richyli.com/tool/loremipsum/">亂數假文產生器 Chinese Lorem Ipsum</a>
+</li>
+<li>
+<a href="http://bugunow.com/lipsum/">乱数假文生成器</a>
+</li>
+<li>
+<a href="http://www.lorem-ipsum.info/generator3">Lorem ipsum Generator3</a>
 </li>
 </ul>
 
@@ -92,7 +106,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年09月25日 16:27:49</p>
+    <p>本页最后修订于 2010年11月30日 16:08:37</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
