--- a/Google.html
+++ b/Google.html
@@ -48,10 +48,20 @@
 <li>
 <a href="https://www.google.com/tv/">Google TV</a>
 </li>
+<li>
+<a href="http://www.google.com/ime/transliteration/">Google Input Method</a> : Type anywhere in your language.
+</li>
+<li>
+<a href="http://www.google.com/transliterate/">Google Transliterate</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">APIs</h2>
 <ul>
+<li>
+<a href="http://code.google.com/apis/customsearch/">Google Custom Search APIs and Tools</a>
+    <a href="http://code.google.com/intl/zh-CN/apis/customsearch/">Google 自定义搜索 API</a>
+</li>
 <li>
 <a href="http://code.google.com/googlecl">Command line tools for the Google Data APIs</a>
 </li>
@@ -126,7 +136,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月18日 13:34:23</p>
+    <p>本页最后修订于 2010年11月30日 12:15:37</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
