--- a/Gtalk.html
+++ b/Gtalk.html
@@ -81,6 +81,13 @@
 <a href="Chatterous.html">Chatterous</a>
 </li>
 <li>
+<a href="Party-Chat.html">Party-Chat</a>
+</li>
+<li>
+<a href="http://code.google.com/p/gtalkgroups/">GtalkGroups</a>
+    <a href="http://io43.com/io43.GtalkGroup/cmds/">命令</a>
+</li>
+<li>
 <a href="http://www.neoease.com/two-ways-to-create-google-talk-groups/">建立 Gtalk 群聊的两种方法</a>
 </li>
 <li>
@@ -118,7 +125,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年07月14日 23:18:16</p>
+    <p>本页最后修订于 2010年11月24日 13:00:10</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
