--- a/HTML5.html
+++ b/HTML5.html
@@ -59,6 +59,12 @@
 <a href="http://www.fofronline.com/2009-06/moving-markup-towards-html5/">Moving markup to wards HTML5</a>
 </li>
 </ul>
+<li>
+<a href="http://html5demos.com/">HTML5 Demos and Examples</a>
+</li>
+<li>
+<a href="https://developer.mozilla.org/en/HTML/HTML5">@mozilla.developer</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">Project</h2>
@@ -74,6 +80,9 @@ webforms
 <a href="http://code.google.com/p/jquery-webforms-2/">jquery-webforms-2</a> - jquery plugin to enable webforms 2.0
 </li>
 </ul>
+<li>
+<a href="http://www.modernizr.com/">Modernizr</a> - 检测浏览器对 HTML5 各种特性的支持情况，并在 &lt;html&gt; 标签上添加对应的 class 样式名。
+</li>
 </ul>
 
 <h2 id="toc_1.2">Demo</h2>
@@ -190,7 +199,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月04日 09:09:00</p>
+    <p>本页最后修订于 2010年12月19日 16:26:31</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
