--- a/JavaScript.html
+++ b/JavaScript.html
@@ -326,14 +326,30 @@ jsbeautify
 </li>
 </ul>
 
+<h2 id="toc_1.11">MD5</h2>
+<ul>
+<li>
+<a href="http://phpjs.org/functions/md5:469">JavaScript md5 - php.js</a>
+</li>
+<li>
+<a href="http://www.webtoolkit.info/demo/javascript-md5">Javascript MD5</a>
+</li>
+<li>
+<a href="http://pajhome.org.uk/crypt/md5/">JavaScript MD5</a>
+</li>
+</ul>
 
-<h2 id="toc_1.11">Books</h2>
+
+<h2 id="toc_1.12">Books</h2>
 <ul>
 <li>
 <a href="http://jsninja.com/">Secrets of JavaScript</a>
 </li>
 <li>
 <a href="http://www.slideshare.net/jeresig/secrets-of-javascript-libraries">slideshare:Secrets of JavaScript Libraries</a>
+</li>
+<li>
+<a href="http://www.slideshare.net/nzakas/high-performance-javascript-webdirections-usa-2010">High Performance JavaScript - WebDirections USA 2010</a>
 </li>
 </ul>
 
@@ -355,7 +371,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月22日 12:34:27</p>
+    <p>本页最后修订于 2010年12月13日 22:54:20</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
