--- a/Links.html
+++ b/Links.html
@@ -146,6 +146,27 @@
 <li>
 <a href="http://blog.zhaojie.me">老赵点滴 - 追求编程之美</a>
 </li>
+<li>
+<a href="http://blog.csdn.net/aimingoo/">愚公</a>
+</li>
+<li>
+<a href="http://blog.csdn.net/myan">孟岩</a>
+</li>
+<li>
+<a href="http://quchao.com/">時計坂一刻館三号室 - 屈超</a>
+</li>
+<li>
+<a href="http://www.cheshirecat.cn/">Cheshire Cat</a>
+</li>
+<li>
+<a href="http://pd4.me/blog/">猪窝_产品设计</a> - 党韬
+</li>
+<li>
+<a href="http://www.pmme.cn/">冰山一角</a> - 百度前端工程师
+</li>
+<li>
+<a href="http://ghsky.com/">浩行天下 ghSky</a>
+</li>
 </ul>
 
 <h2 id="toc_1.4">Softwares</h2>
@@ -224,7 +245,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月23日 09:49:05</p>
+    <p>本页最后修订于 2010年12月16日 14:59:27</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
