--- a/Maven.html
+++ b/Maven.html
@@ -57,6 +57,12 @@
 <li>
 《<a href="http://github.com/sonatype/maven-guide-zh">Maven 权威指南</a>》 - 中文版
 </li>
+<li>
+<a href="http://www.juvenxu.com/mvn-def-guide/">《Maven权威指南》</a>
+</li>
+<li>
+<a href="http://www.juvenxu.com/mvn-in-action/">《Maven实战》</a>
+</li>
 </ul>
 
 <script type="text/javascript">
@@ -77,7 +83,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月04日 10:36:15</p>
+    <p>本页最后修订于 2010年12月10日 14:16:48</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
