--- a/Mercurial.html
+++ b/Mercurial.html
@@ -29,6 +29,7 @@
 <ul>
 <li>
 <a href="http://mercurial.selenic.com/">Mercurial</a>
+        <a href="http://mercurial.selenic.com/wiki/ChineseTutorial">Mercurial 使用教程</a>
 </li>
 <li>
 <a href="http://hginit.com/">Hg Init: a Mercurial tutorial</a>
@@ -75,7 +76,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年10月17日 19:15:33</p>
+    <p>本页最后修订于 2010年12月03日 10:37:34</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
