--- a/OS.html
+++ b/OS.html
@@ -36,6 +36,9 @@
 <li>
 <a href="http://fedoraproject.org/">Fedora</a>
 </li>
+<li>
+<a href="http://www.linux.fm/">linux.fm</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">Windows</h2>
@@ -242,6 +245,9 @@ gpedit.msc-----组策略
 <li>
 <a href="http://net.ytu.edu.cn/share/%D7%CA%C1%CF/Unix%CD%B4%BA%DE%D5%DF%CA%D6%B2%E1.htm">UNIX痛恨者手册</a>
 </li>
+<li>
+<a href="http://www.ibm.com/developerworks/cn/linux/l-tip-prompt/l-pex/">如何远程安装Linux</a>
+</li>
 </ul>
 
 <h2 id="toc_1.6">Ubuntu</h2>
@@ -298,7 +304,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月04日 21:54:40</p>
+    <p>本页最后修订于 2010年12月15日 21:46:25</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
