--- a/PHP.html
+++ b/PHP.html
@@ -41,6 +41,15 @@
 <li>
 <a href="http://paranimage.com/7%E6%AC%BE%E6%9C%AC%E5%9C%B0php%E7%8E%AF%E5%A2%83%E6%90%AD%E5%BB%BA%E5%B7%A5%E5%85%B7/">7款本地PHP环境搭建工具</a>
 </li>
+<li>
+<a href="http://www.leapsoul.cn/?p=695">PHP环境搭建:Windows 7下安装配置PHP+Apache+Mysql环境教程</a>
+</li>
+<li>
+<a href="http://bbs.phpchina.com/thread-13048-1-1.html">windows下PHP5+APACHE+MYSQ完整配置（个人总结）</a> - 总结的非常详细非常好。
+</li>
+<li>
+<a href="http://www.leapsoul.cn/">David's blog</a> - PHP 网站开发。
+</li>
 </ul>
 
 <h2 id="toc_1.1">Framework</h2>
@@ -155,7 +164,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月10日 10:29:18</p>
+    <p>本页最后修订于 2010年12月13日 01:07:08</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
