--- a/Party-Chat.html
+++ b/Party-Chat.html
@@ -30,6 +30,8 @@
 <li>
 <a href="http://partychapp.appspot.com/">Partychat</a>
     <a href="http://code.google.com/p/partychapp/">@google.code</a>
+    <a href="http://techwalla.blogspot.com/">author's blog</a>
+    <a href="http://roomchinese.appspot.com/">中文站</a>
 </li>
 </ul>
 
@@ -51,7 +53,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年10月13日 10:06:25</p>
+    <p>本页最后修订于 2010年11月24日 12:58:31</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
