--- a/Python.html
+++ b/Python.html
@@ -56,6 +56,9 @@
 <li>
 <a href="http://webpy.org/">web.py</a>
 </li>
+<li>
+<a href="http://pypy.org/">PyPy</a>
+</li>
 </ul>
 
 <h2 id="toc_1.2">Books</h2>
@@ -73,6 +76,9 @@
     <a href="http://github.com/kevinw/pyflakes-vim">src</a>,
     <a href="http://pychecker.sourceforge.net/">Pychecker</a>,
     <a href="http://www.vim.org/scripts/script.php?script_id=891">PyLint</a>
+</li>
+<li>
+<a href="http://www.jetbrains.com/pycharm/">Python IDE with Django</a>
 </li>
 </ul>
 
@@ -94,7 +100,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月20日 16:13:21</p>
+    <p>本页最后修订于 2010年11月29日 23:16:48</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
