--- a/Sed.html
+++ b/Sed.html
@@ -33,6 +33,14 @@
 <li>
 <a href="http://sed.sourceforge.net/">sed.sf.net</a>
 </li>
+<li>
+<a href="http://blog.chinaunix.net/u/13392/showart.php?id=133128">sed-非交互式文本编辑器(L.E.McMahon 著,中文翻译)</a>
+    <a href="http://cm.bell-labs.com/7thEdMan/vol2/sed">En</a>
+</li>
+<li>
+<a href="http://blog.chinaunix.net/u/13392/showart.php?id=134410">awk-模式扫描与处理语言(Aho,Kernighan,Weinberger著,中文翻译)(第二版)</a>
+    <a href="http://cm.bell-labs.com/7thEdMan/vol2/awk">En</a>
+</li>
 </ul>
 
 <script type="text/javascript">
@@ -53,7 +61,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年03月14日 13:08:08</p>
+    <p>本页最后修订于 2010年11月28日 20:09:26</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
