--- a/Tomcat.html
+++ b/Tomcat.html
@@ -36,6 +36,10 @@
     <a href="http://sourceforge.net/projects/jaxmao/">@sf.net</a>
 </li>
 <li>
+<a href="http://www.ibm.com/developerworks/cn/java/j-lo-tomcat1/">Tomcat 系统架构与设计模式，第 1 部分: 工作原理</a>
+    <a href="http://www.ibm.com/developerworks/cn/java/j-lo-tomcat2/">第 2 部分: 设计模式分析</a>
+</li>
+<li>
 <a href="http://www.javaeye.com/news/17928">Tomcat 7 的七大新特性</a>
 </li>
 </ul>
@@ -92,7 +96,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年10月23日 16:21:22</p>
+    <p>本页最后修订于 2010年12月17日 09:10:47</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
