--- a/Velocity.html
+++ b/Velocity.html
@@ -68,10 +68,28 @@
 <li>
 <a href="http://qa.taobao.com/?p=7830">Webx框架浅析</a>
 </li>
+<li>
+<a href="velocity-environment.html">搭建 Velocity 开发环境</a>
+</li>
 </ul>
 
+<h2 id="toc_1.1">Tools</h2>
+<ul>
+<li>
+<a href="http://propsorter.sourceforge.net/veloeclipse/">VeloEclipse</a>
+    based on <a href="http://veloedit.sourceforge.net/">VeloEdit</a> <br />
+    Installing:
+<pre>
+Help -&gt; Software Updates -&gt; Find and Install... -&gt; Search for new features to install -&gt; Add Update Site... -&gt;
 
-<h2 id="toc_1.1">Books</h2>
+Name : Veloeclipse
+
+URL: http://propsorter.sourceforge.net/veloeclipse
+</pre>
+</li>
+</ul>
+
+<h2 id="toc_1.2">Books</h2>
 <ul>
 <li>
 <a href="http://www.docin.com/p-13038142.html">John.Wiley.and.Sons.Mastering.Apache</a>
@@ -82,8 +100,7 @@
 </ul>
 
 
-<h2 id="toc_1.2">手册文档</h2>
-
+<h2 id="toc_1.3">手册文档</h2>
 <ul>
 <li>
 <a href="http://velocity.apache.org/engine/devel/vtl-reference-guide.html">http://velocity.apache.org/engine/devel/vtl-reference-guide.html</a>
@@ -97,12 +114,15 @@
 </ul>
 
 
-<h2 id="toc_1.3">会议&amp;分享(Slide Share)</h2>
+<h2 id="toc_1.4">会议&amp;分享(Slide Share)</h2>
 <ul>
 <li>
 Velocity 2010
 </li>
 <ul>
+<li>
+<a href="http://velocityconf.com/">Velocity</a> - O'Reilly Conferences.
+</li>
 <li>
 <a href="http://en.oreilly.com/velocity2010">Velocity 2010@oreilly</a>
 </li>
@@ -112,6 +132,9 @@ Velocity 2010
 <li>
 <a href="http://velocity.oreilly.com.cn/">O'Reilly Velocity China 2010</a>
 </li>
+<li>
+<a href="http://www.youku.com/playlist_show/id_5333814.html">O'Reilly Velocity China 2010</a>
+</li>
 </ul>
 <li>
 <a href="http://www.docin.com/p-41668004.html">Apache Velocity A Java Templating Engine</a>
@@ -119,14 +142,13 @@ Velocity 2010
 </ul>
 
 
-<h2 id="toc_1.4">Note</h2>
+<h2 id="toc_1.5">Note</h2>
 <p>
 这里简要记录一下常用的内容，详细可以查看书。
 </p>
 
 <p>
 变量： <code>${name}</code>，简写 <code>$name</code>。
-注：引用属性或调用函数时不能加{花括号}。
 </p>
 
 <p>
@@ -153,12 +175,9 @@ Velocity 2010
 如果右侧的值为 null，则赋值失败，左侧变量仍保持原值。
 </li>
 </ol>
-<p>
-#
-</p>
 
 
-<h2 id="toc_1.5">Tips</h2>
+<h2 id="toc_1.6">Tips</h2>
 <p>
 Velocity 在表单中添加 name="action" 的文本/隐藏域，可以调用对应 Java 类
 （submit 按钮的 name 则指定对应的方法名称，如 event_submit_do_save ），
@@ -189,7 +208,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月05日 10:54:12</p>
+    <p>本页最后修订于 2010年12月19日 16:39:37</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
