--- a/Vim.html
+++ b/Vim.html
@@ -67,6 +67,10 @@
 </p>
 
 <p>
+<a href="http://www.moolenaar.net/">Vim 作者的个人网站</a>。
+</p>
+
+<p>
 <img src="http://vim-script-cn.googlecode.com/svn/trunk/img/vim-logo.png" />
 </p>
 
@@ -610,6 +614,10 @@ Zen-Coding
 </li>
 <li>
 <a href="Vimwiki.html">Vimwiki</a>
+</li>
+<li>
+Org-mode : <a href="http://www.vim.org/scripts/script.php?script_id=3342">@vim.org</a>
+    <a href="https://github.com/hsitz/VimOrganizer">@github</a>
 </li>
 <li>
 <a href="http://sjl.bitbucket.org/gundo.vim/">Gundo</a>
@@ -1383,7 +1391,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月17日 21:49:16</p>
+    <p>本页最后修订于 2010年12月19日 15:39:22</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
