--- a/Vimperator.html
+++ b/Vimperator.html
@@ -28,7 +28,17 @@
 <h1 id="toc_1">Vimperator</h1>
 <ul>
 <li>
-<a href="http://vimperator.org/trac/wiki/Vimperator">Vimperator</a> ^<a href="https://addons.mozilla.org/en-US/firefox/addon/4891">Addons</a> <a href="http://www.ooso.net/archives/432">用gvim编辑firefox的文本框内容</a>^
+<a href="http://vimperator.org/">Vimperator</a>
+    <a href="https://addons.mozilla.org/en-US/firefox/addon/4891">Addons</a>
+</li>
+<li>
+<a href="http://code.google.com/p/vimperator-labs">vimperator-labs</a>
+</li>
+<li>
+<a href="http://code.google.com/p/cvimp/">Vimperator 中文翻译</a>
+</li>
+<li>
+<a href="http://www.ooso.net/archives/432">用gvim编辑firefox的文本框内容</a>
 </li>
 <li>
 <a href="http://linuxtoy.org/archives/google-reader-and-vimperator.html">Google Reader 与 Vimperator 快捷键冲突解决之道</a>
@@ -40,15 +50,26 @@
 <a href="http://mooninsky.net/summary-of-vimperator">vimperator使用精要</a> - 非常赞，非常详细的技巧介绍。
 </li>
 <li>
-<a href="http://code.google.com/p/pinyin-hints-vimperator/">为vimperator的hint模式添加拼音首字母过滤</a>
-</li>
-<li>
 <a href="http://vimfox.info/">vimfox.info</a>
 </li>
+<ul>
+<li>
+<a href="http://xbeta.info/latest-discuss.htm">vimfox.info: Vimperator的中文大本营</a>
+</li>
 </ul>
-<blockquote>
+</ul>
+
+<h2 id="toc_1.1">Plugin</h2>
+<ul>
+<li>
+<a href="http://code.google.com/p/pinyin-hints-vimperator/">为vimperator的hint模式添加拼音首字母过滤</a>
+</li>
+</ul>
+
+<h2 id="toc_1.2">Notes</h2>
+<p>
 如果你想保持 Firefox 原本的菜单栏，工具栏和书签栏，在配置文件里面加上 <code>set go+=mBT</code> 即可。
-</blockquote>
+</p>
 
 <script type="text/javascript">
 function onSearch(){
@@ -68,7 +89,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月12日 22:36:10</p>
+    <p>本页最后修订于 2010年12月09日 10:47:33</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
