--- a/Vimwiki.html
+++ b/Vimwiki.html
@@ -152,7 +152,7 @@ let tlist_vimwiki_settings = 'wiki;h:Headers'
 <h2 id="toc_1.3">延伸阅读</h2>
 <ul>
 <li>
-<a href="http://hotoo.github.com/vimwiki/">闲耘™.Wiki</a>
+<a href="http://wiki.hotoo.me/">闲耘™.Wiki</a>
 </li>
 <li>
 <a href="http://wiki.ktmud.com/">丘迟的搞维基世界</a>
@@ -168,6 +168,12 @@ let tlist_vimwiki_settings = 'wiki;h:Headers'
 </li>
 <li>
 <a href="http://yibie.me/">The Personal Wiki Of Yibie</a> - 使用 Emacs Org 模式。
+</li>
+<li>
+<a href="http://bigzhu.co.cc/">bigzhu</a>
+</li>
+<li>
+<a href="http://www.cheshirecat.cn/wiki/index.html">Cheshire Cat's Wiki</a>
 </li>
 <li>
 <a href="http://wiki.gracecode.com/">明城's Wiki</a><sup><small>目前失效</small></sup>
@@ -192,7 +198,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年10月26日 13:55:53</p>
+    <p>本页最后修订于 2010年12月10日 13:52:04</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
