--- a/Wiki.html
+++ b/Wiki.html
@@ -33,6 +33,9 @@
 <li>
 <a href="http://www.mediawiki.org/wiki/Help:Contents">Help:Contenss - MediaWiki</a>
 </li>
+<li>
+<a href="http://www.chedong.com/blog/archives/001110.html">Wiki发布系统的选型</a>
+</li>
 </ul>
 
 <h2 id="toc_1.1">Services</h2>
@@ -119,7 +122,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月19日 20:16:16</p>
+    <p>本页最后修订于 2010年12月03日 00:52:20</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
