--- a/video.html
+++ b/video.html
@@ -83,6 +83,9 @@
 <a href="http://www.youku.com/playlist_show/id_782468.html">@youku</a>
 </li>
 </ul>
+<li>
+<a href="http://www.youku.com/show_page/id_zac398d46a47011df97c0.html">11度青春系列电影</a>
+</li>
 </ul>
 
 
@@ -125,7 +128,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年10月29日 22:36:57</p>
+    <p>本页最后修订于 2010年12月12日 00:05:26</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
