--- a/JavaScript.html
+++ b/JavaScript.html
@@ -91,7 +91,7 @@
 <h2 id="toc_1.3">UI</h2>
 <ul>
 <li>
-Calendar/DataTime
+Calendar/DateTime
 </li>
 <ul>
 <li>
@@ -106,6 +106,12 @@ TreeView
 <a href="http://www.jstree.com/">jsTree</a>^<a href="http://code.google.com/p/jstree/">2</a>^
 </li>
 </ul>
+<li>
+DataGrid/Table
+</li>
+<li>
+<a href="http://paranimage.com/12-javascipt-datagrid-control/">12款Javascript表格控件(DataGrid)</a>
+</li>
 </ul>
 
 
@@ -371,7 +377,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月13日 22:54:20</p>
+    <p>本页最后修订于 2010年12月21日 21:58:29</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
