--- a/Links.html
+++ b/Links.html
@@ -93,6 +93,9 @@
 <a href="http://www.quirksmode.org/">PPK's Blog</a>
 </li>
 <li>
+<a href="http://paulirish.com/">Paul Irish</a>
+</li>
+<li>
 <a href="http://qiqicartoon.com/">LyChi's Blog</a>
 </li>
 <li>
@@ -166,6 +169,15 @@
 </li>
 <li>
 <a href="http://ghsky.com/">浩行天下 ghSky</a>
+</li>
+<li>
+<a href="http://www.cssforest.org/blog/">CSS 森林</a>
+</li>
+<li>
+<a href="http://leeiio.me/">Leeiio Chaos Made</a>
+</li>
+<li>
+<a href="http://freeleaf.me/">叶子</a>
 </li>
 </ul>
 
@@ -245,7 +257,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月16日 14:59:27</p>
+    <p>本页最后修订于 2010年12月21日 22:11:09</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
