--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@ Code Prettify/Syntax Highligjht
 <a href="Google.html">Google</a> | <a href="http://msdn.microsoft.com/en-us/library">MSDN Library</a> | <a href="Baidu.html">百度</a>
 </li>
 <li>
-<a href="Compiler.html">编译器</a>
+<a href="Compiler.html">编译器</a> | <a href="Algorithm.html">算法</a>
 </li>
 <li>
-<a href="Algorithm.html">算法</a>
+<a href="Agile-Development.html">敏捷开发</a>
 </li>
 <li>
 <a href="http://www.canonical.org/~kragen/tao-of-programming.html">The Tao Of Programming</a>,
@@ -145,7 +145,7 @@ Code Prettify/Syntax Highligjht
 <li>
 <a href="data-visualization.html">数据可视化</a> | <a href="BI.html">商业智能</a> | <a href="database.html">数据库(Database)</a> |
     <a href="NoSQL.html">NoSQL</a>
-    Oracle | MySQL | mongodb | pg | SQLite | couchdb
+    Oracle | MySQL | mongodb | <a href="http://www.postgresql.org/">PostgreSQL</a> | SQLite | couchdb
 </li>
 <li>
 <a href="http://hadoop.apache.org/">Hadoop</a> | <a href="http://hive.apache.org/">Hive</a>
@@ -1145,7 +1145,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年12月20日 00:07:08</p>
+    <p>本页最后修订于 2010年12月22日 00:10:16</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
