--- a/jQuery.html
+++ b/jQuery.html
@@ -178,6 +178,7 @@ Checkbox &amp; Radio
 <ul>
 <li>
 <a href="http://widowmaker.kiev.ua/checkbox/">jQuery checkbox</a>
+        <a href="http://code.google.com/p/jquery-checkbox/">@google.code</a>
 </li>
 <li>
 <a href="http://aaronweyenberg.com/90/pretty-checkboxes-with-jquery">Pretty checkboxes with jQuery</a>
@@ -237,7 +238,7 @@ function onSearch(){
     <p><a rel="license" href="http://creativecommons.org/licenses/by/2.5/"><img alt="Creative Commons License" style="border-width: 0pt;" src="http://i.creativecommons.org/l/by/2.5/88x31.png" align="right"></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 Generic License</a>.<br>
     Copyleft © 2010, Driven by <a href="http://code.google.com/p/vimwiki/">Vimwiki</a>, Theme by 闲耘™(@hotoo).
     </p>
-    <p>本页最后修订于 2010年11月30日 16:35:40</p>
+    <p>本页最后修订于 2010年12月21日 10:01:08</p>
 </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
